魚イメージを追加

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
             <img src="github-test.jpg" alt="ゆらゆらくらげ！">
         </div>
         <div>
+            <img src="david-clode-t_bRgI89b_U-unsplash.jpg" alt="暖かい魚">
+        </div>
+        <div>
             <h2>Github便利</h2>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
             Ad id facere itaque aspernatur animi corrupti? Blanditiis a illum officia cumque suscipit nesciunt,
